<resources>
    <string name="app_name">Domowa Apteczka</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="instruction_add">1.Aby dodać lek podaj jego nazwę, możesz uzupełnić również pozostałe pola, a następnie naciśnij przycisk \"DODAJ LEK\".\n \n2.Jeżeli nie chcesz uzupełniać pozostałych pól, możesz uzupełnić te informację później.\n\n3.Jeżeli pola nie zostaną uzupełnione ich zawartości domyślnie ustawione są na brak.</string>
    <string name="instruction_add_place">1.Aby dodać miejsce podaj jego nazwę, a następnie naciśnij przycisk \"DODAJ MIEJSCE\".\n\n2.Jeżeli nie chcesz uzupełniać pola opis, możesz uzupełnić je później.</string>
    <string name="instruction_update">1.Aby zaktualizować lek uzupełnij pola, odpowiadające informacji, którą chcesz zmienić, a następnie naciśnij przycisk \"ZAKTUALIZUJ LEK\".\n\n2.By wrócić do menu głównego bez dokonywania zmian naciśnij przycisk \"WYJDŹ POZOSTAWIAJĄC BEZ ZMIAN\"</string>
    <string name="instruction_update_place">1.Aby zaktualizować miejsce uzupełnij pola, odpowiadające informacji, którą chcesz zmienić, a następnie naciśnij przycisk \"ZAKTUALIZUJ MIEJSCE\". \n\n3.By wrócić do menu głównego bez dokonywania zmian naciśnij przycisk \"WYJDŹ POZOSTAWIAJĄC BEZ ZMIAN\"</string>
    <string name="instruction_search">"1.Aby wyszukać lek podaj jego nazwę i/lub formę i/lub wskazanie do użycia, a następnie naciśnij przycisk\"Szukaj\""</string>
    <string name="instruction_display">"1.Tu wyświetlone zostają dodane leki. \n\n2.Aby zaktualizować lek, naciśnij "AKTUALIZUJ" przy interesującej cię pozycji. \n\n3.Jeżeli chcesz usunąć lek, naciśnij "USUŃ" przy wybranej pozycji"</string>
    <string name="instruction_display_place">"1.Tu wyświetlone zostają dodane miejsca. \n\n2.Aby zaktualizować miejsce, naciśnij "AKTUALIZUJ" przy interesującej cię pozycji. \n\n3.Jeżeli chcesz usunąć miejsce, naciśnij "USUŃ" przy wybranej pozycji. \n\n4. Możesz usunąć miejsce wraz z zawartością lub przenieść zawartość do leków nieprzypisanych do miejsca. \n\n5Jeżeli chcesz podejrzeć zawartość miejsca, naciśnij "POKAŻ ZAWARTOŚĆ""</string>
    <string name="instruction_help">"Tu znajdziesz podstawowe informacje o działaniu programu, po zapoznaniu się z nimi wróć do menu głównego i ciesz się z możliwości aplikacji"</string>
    <string name="back_button">Wróć</string>
    <string name="name_string">Nazwa</string>
    <string name="amount_string">Ilość</string>
    <string name="dose_string">Dawka</string>
    <string name="place_string">Miejsce</string>
    <string name="description_string">Opis</string>
    <string name="search_string">Szukaj</string>
    <string name="delete_string">Usuń</string>
    <string name="form_string">Forma</string>
    <string name="purpose_string">Wskazanie</string>
    <string name="update_string">AKTUALIZUJ</string>
    <string name="med_name_string">Nazwa leku</string>
    <string name="place_name_string">Nazwa miejsca</string>
    <string name="change_string">Zmień</string>
    <string name="current_string">Obecnie</string>
    <string name="yes_string">TAK</string>
    <string name="no_string">NIE</string>
    <string name="place_dialog_string">Czy chcesz usunąć miejsce wraz z zawartością? .\n Jeżeli wybierzesz \"NIE\", zawartość zostanie przeniesiona do \"brak\"</string>
    <string name="delete_dialog_string">Czy na pewno chcesz trwale usunąć pozycję?</string>
    <string name="help">"Witaj w pomocy! Naciśnij na nurtujące cię pytanie i znajdź odpowiedź"</string>
    <string name="help_title">Pomoc</string>
    <string name="question1">1. Po co mi ta aplikacja?</string>
    <string name="question2">2. Jak poruszać się po aplikacji?</string>
    <string name="question3">3. Co mogę robić?</string>
    <string name="answer1_1">Aplikacja została stworzona, aby ułatwić poszukiwanie leków</string>
    <string name="answer1_2">Dzięki tej aplikacji powinieneś/powinnaś mieć możliwość zawsze i wszędzie skontrolować stan apteczki, oczywiście, gdy na bieżąco uaktualniasz informacje</string>
    <string name="answer2_1">Po uruchomieniu aplikacji od razu możesz wyszukać lek, jednak początkowo baza lekó jest pusta, należy więc pamiętać o jej uzupełnieniu</string>
    <string name="answer2_2">W celu dodania leku wybierz z paska stanu ikonę przedstawiającą trzy poziome kreski, to ikona menu, a następnie wybierz \"Dodaj lek\"</string>
    <string name="answer2_3">Aby dodać miejsce, sprawdzić listę leków lub miejsc postępuj analogicznie, wybierając odpowiednie funkcje</string>
    <string name="answer2_4">Do każdej czynności dołączone są dodatkowe podpowiedzi, wyświetlą się one po naciśnięciu ikony z pytajnikiem na pasku stanu</string>
    <string name="answer2_5">Aby powrócić do strony głównej naciśnij ikonę domu na pasku zadań</string>
    <string name="answer3_1">1. Szukać leków</string>
    <string name="answer3_2">2. Dodawać/usuwać leki</string>
    <string name="answer3_3">3. Aktualizować leki</string>
    <string name="answer3_4">4. Dodawać/usuwać nowe miejsca przechowywania</string>
    <string name="answer3_5">5. Aktualizować informacje o miejscu przechowywania</string>
    <string name="answer3_6">6. Przeglądać listę dodanych leków</string>
    <string name="place_update_title">Zaktualizuj miejsce przechowywania</string>
    <string name="place_update_success">Pomyślnie zaktualizowano miejsce</string>
    <string name="place_update_fail">Nie udało się zaktualizować</string>
    <string name="place_list_title">Lista miejsc</string>
    <string name="do_not_edit">Tej pozycji nie możesz edytować</string>
    <string name="do_not_delete">Tej pozycji nie możesz usunąć</string>
    <string name="add_place_title">Dodaj miejsce przechowywania</string>
    <string name="add_name_remind">Musisz podać nazwę miejsca!</string>
    <string name="place_exists_remind">Mijesce o takiej nazwie już istnieje</string>
    <string name="none">brak</string>
    <string name="add_place_succsess">Pomyślnie dodano miejsce</string>
    <string name="add_place_fail">Nie udało się dodać miejsca</string>
    <string name="update_med_title">Zaktualizuj lek</string>
    <string name="amount_int_remind">Musisz podać ilość w postaci liczby (nie musi być całkowita)</string>
    <string name="update_med_succsess">Pomyślnie zaktualizowano lek</string>
    <string name="update_med_fail">Błąd podczas aktualizacji</string>
    <string name="med_list_title">Lista leków</string>
    <string name="all_med_added">Wszystkie dodane leki</string>
    <string name="list_of_found_meds">Liczba znalezionych leków:</string>
    <string name="no_meds_found">Nie znaleziono pasujących leków</string>
    <string name="add_med_title">Dodaj lek</string>
    <string name="fill_name_remind">Musisz podać nazwę leku!</string>
    <string name="add_med_succsess">Pomyślnie dodano lek</string>
    <string name="add_med_fail">Błąd podczas dodawania</string>
    <string name="place_add_string">Dodaj miejsce</string>
    <string name="Id_string">ID</string>
    <string name="find_med_string">Znajdź lek:</string>
    <string name="name_form_string">Podaj nazwę</string>
    <string name="choose_form_string">Wybierz \n formę leku</string>
    <string name="choose_purpose_string">Wybierz   \n wskazanie \n do zażycia leku</string>
    <string name="show_content_string">Pokaż Zawartość</string>
</resources>