<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:rowCount="7">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginEnd="5dp"
        android:layout_row="0"
        android:paddingBottom="@dimen/recycler"
        android:text="ID"
        android:textColor="#00ffffff"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:paddingBottom="@dimen/recycler"
        android:text="@string/name_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:paddingBottom="@dimen/recycler"
        android:text="@string/dose_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:paddingBottom="@dimen/recycler"
        android:text="@string/form_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:paddingBottom="@dimen/recycler"
        android:text="@string/amount_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginEnd="30dp"
        android:layout_row="4"
        android:paddingBottom="@dimen/recycler"
        android:text="@string/purpose_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"
        android:paddingBottom="15dp"
        android:text="@string/place_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginStart="20dp"
        android:layout_row="0"
        android:text="@string/name_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDoseDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginStart="20dp"
        android:layout_row="1"
        android:text="@string/dose_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFormDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginStart="20dp"
        android:layout_row="2"
        android:text="@string/form_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAmountDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginStart="20dp"
        android:layout_row="3"
        android:text="@string/amount_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPurposeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginStart="20dp"
        android:layout_row="4"
        android:text="@string/purpose_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPlaceDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginStart="20dp"
        android:layout_row="5"
        android:text="@string/place_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvDisplay"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bGoToUpdate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginStart="10dp"
        android:layout_row="6"
        android:background="@drawable/rounded_button"
        android:text="@string/update_string"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bDeleteMedFromList"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_row="6"
        android:background="@drawable/rounded_button"
        android:text="@string/delete_string"
        android:textColor="@android:color/white" />

</GridLayout>