<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:padding="4dp"

    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="40dp"

    android:columnCount="2"
    android:gravity="center"
    android:orientation="vertical"
    android:rowCount="5"

    android:alignmentMode="alignBounds"
    android:rowOrderPreserved="false"
    android:useDefaultMargins="true"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.joanna.housepharmacy.Activities.MainActivity"
    tools:showIn="@layout/app_bar_main"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_marginTop="20dp"
        android:layout_row="0"
        android:gravity="center"
        android:text="@string/find_med_string"
        android:textColor="@color/text"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_row="1"
        android:gravity="center"
        android:text="@string/name_form_string"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_row="2"
        android:gravity="center"
        android:text="@string/choose_form_string"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="60dp"
        android:layout_row="3"
        android:gravity="center"
        android:text="@string/choose_purpose_string"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"

        />

    <AutoCompleteTextView
        android:id="@+id/etSearchByName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_column="1"
        android:layout_marginStart="10dp"
        android:layout_row="1"
        android:gravity="center"
        android:hint="@string/name_string"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:ems="10"
        android:text="">

        <requestFocus />
    </AutoCompleteTextView>

    <Spinner
        android:id="@+id/spFormMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_marginStart="10dp"
        android:layout_row="2"
        android:gravity="center">

    </Spinner>

    <Spinner
        android:id="@+id/spPurposeMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="10dp"
        android:layout_row="3"
        android:gravity="center">
    </Spinner>

    <Button

        android:id="@+id/bSearchMed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="10dp"
        android:layout_row="4"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:text="@string/search_string"
        android:textColor="@android:color/white" />


</GridLayout>
