<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="50dp"
    android:columnCount="2"
    android:rowCount="8"
    tools:context="com.example.joanna.housepharmacy.MedAddActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_row="0"
        android:text="@string/med_name_string"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="10dp"
        android:layout_row="1"
        android:gravity="center"
        android:text="@string/dose_string"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="10dp"
        android:layout_row="2"
        android:text="@string/form_string"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="10dp"
        android:layout_row="3"
        android:text="@string/amount_string"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="10dp"
        android:layout_row="4"
        android:text="@string/purpose_string"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="10dp"
        android:layout_row="5"
        android:text="@string/place_string"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/bAddMed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="7"
        android:background="@drawable/rounded_button"
        android:text="Dodaj lek"
        android:textColor="@android:color/white"
        android:layout_marginBottom="30dp"/>


    <EditText
        android:id="@+id/etNameAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/bottom_margin"
        android:gravity="center"
        android:hint="@string/name_string"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/etDoseAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/bottom_margin"
        android:gravity="center"
        android:hint="@string/dose_string"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spFormAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/bottom_margin"
        android:gravity="center"

        />


    <EditText
        android:id="@+id/etAmountAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/bottom_margin"
        android:gravity="center"
        android:hint="@string/amount_string"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPurposeAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:layout_column="1"
        android:gravity="center"
        android:hint="@string/purpose_string"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/bottom_margin"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />


    <Spinner
        android:id="@+id/spPlaceAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/bottom_margin"
        android:gravity="center"

        />

</GridLayout>
