<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="6"
    android:columnCount="3"
    android:layout_gravity="center"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="20dp"
    tools:context="com.example.joanna.housepharmacy.PlaceUpdateActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_string"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginEnd="10dp"
        android:textColor="@color/text"
        android:textSize="@dimen/tvUpdate"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/description_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvUpdate"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:layout_column="1"
        android:gravity="center"
        android:text="@string/current_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvUpdate"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvPlaceNameUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/name_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvUpdate"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescriptionUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:maxWidth="200dp"
        android:text="@string/description_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvUpdate"
        android:layout_marginBottom="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:layout_column="2"
        android:gravity="center"
        android:text="@string/change_string"
        android:textColor="@color/text"
        android:textSize="@dimen/tvUpdate"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPlaceNameUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:layout_column="2"
        android:gravity="center"
        android:hint="@string/name_string"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tvUpdate"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDescriptionUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:layout_column="2"
        android:maxWidth="150dp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:hint="@string/description_string"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tvUpdate"
        android:textStyle="bold" />


    <Button
        android:id="@+id/bUpdatePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/update_string"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bDeletePlaceUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:background="@drawable/rounded_button"
        android:text="@string/delete_string"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/bBackUpdatePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:text="WYJDŹ POZOSTAWIAJĄC BEZ ZMIAN"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        />
</GridLayout>
